--- a/frontend/src/app/components/bucket/bucket-spillover-policy-form/bucket-spillover-policy-form.less
+++ b/frontend/src/app/components/bucket/bucket-spillover-policy-form/bucket-spillover-policy-form.less
@@ -3,6 +3,10 @@
 bucket-spillover-policy-form {
     display: block;
 
+    vr {
+        background-color: @color7;
+    }
+
     .spillover-table {
         .state-col {
             min-width: 60px;
